<resources>
    <string name="app_name">Mark Book</string>


    <!-- activity_add_marks strings -->
    <string name="course">Course</string>
    <string name="credit">Credit</string>
    <string name="mark">Mark (%)</string>
    <string name="year">Year</string>
    <string name="id">ID Number</string>
    <string name="addBtn">Add</string>
    <string name="UpdateBtn">Update</string>
    <string name="deleteBtn">Delete</string>
    <string name="deleteAllBtn">Delete All</string>
    <string name="showListBtn">Show List</string>
    <string name="gpaBtn">GPA</string>
    <string name="courseHint">MAT186 (Calc 2)</string>
    <string name="creditHint">0.5</string>
    <string name="markHint">71</string>
    <string name="yearHint">2016</string>


    <!-- activity_chose_gpa_type string-->
    <string name="cGPABtn">cGPA Button</string>
    <string name="sGPABtn">sGPA Button</string>
    <string name="termExample">Term (e.g Winter)</string>

    <!-- activity_display_gpa string-->
    <string name="performance">Excellent</string>
    <string name="percentage">93%</string>
    <string name="sampleGPA">4.0</string>

    <!-- activity_main strings -->
    <string name="addMarksBtn">ADD MARKS</string>
    <string name="markBookTitle">Mark Book Title</string>
    <string name="markBookLogo">Mark Book Logo</string>

    <!-- activity_gpascale_set strings -->
    <string name="percentageTitle">Percentage</string>
    <string name="GPATitle">   GPA   </string>
    <string name="letterTitle">Letter</string>

    <!-- Percentage Grades -->
    <string name="aPlus">90% - 100%</string>
    <string name="a">85% - 89%</string>
    <string name="aMinus">80% - 84%</string>

    <string name="bPlus">77% - 79%</string>
    <string name="b">73% - 76%</string>
    <string name="bMinus">70% - 72%</string>

    <string name="cPlus">67% - 69%</string>
    <string name="c">63% - 66%</string>
    <string name="cMinus">60% - 62%</string>

    <string name="dPlus">57% - 59%</string>
    <string name="d">53% - 56%</string>
    <string name="dMinus">50% - 52%</string>

    <string name="f">0% - 49% </string>


    <!-- Letter Grades -->
    <string name="aPlusL">A+</string>
    <string name="aL">A</string>
    <string name="aMinusL">A-</string>

    <string name="bPlusL">B+</string>
    <string name="bL">B</string>
    <string name="bMinusL">B-</string>

    <string name="cPlusL">C+</string>
    <string name="cL">C</string>
    <string name="cMinusL">C-</string>

    <string name="dPlusL">D+</string>
    <string name="dL">D</string>
    <string name="dMinusL">D-</string>

    <string name="fL">F</string>

    <!-- GPA Scale Grades -->
    <string name="aPlusGPA">4.0</string>
    <string name="aGPA">4.0</string>
    <string name="aMinusGPA">3.7</string>

    <string name="bPlusGPA">3.3</string>
    <string name="bGPA">3.0</string>
    <string name="bMinusGPA">2.7</string>

    <string name="cPlusGPA">2.3</string>
    <string name="cGPA">2.0</string>
    <string name="cMinusGPA">1.7</string>

    <string name="dPlusGPA">1.3</string>
    <string name="dGPA">1.0</string>
    <string name="dMinusGPA">0.7</string>

    <string name="fGPA">0.0</string>

    <string name="saveButton">SAVE</string>





</resources>
