<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.nirmit.markbook.AddMarks"
        android:background="#aa7c8489"
        android:id="@+id/entireScreen">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/databaseScreen"
            android:background="#aa3f647b"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/course"
                android:id="@+id/courseNameTextView"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:textSize="25sp"
                android:textColor="@color/black"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/courseEditText"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:ems="8"
                android:layout_alignParentEnd="true"
                android:layout_alignBottom="@+id/courseNameTextView"
                android:textColor="@color/textColor"
                android:layout_marginEnd="20dp"
                android:hint="@string/courseHint" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/credit"
                android:id="@+id/creditTextView"
                android:layout_below="@+id/courseNameTextView"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:textSize="25sp"
                android:textColor="@color/black"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="8"
                android:id="@+id/creditEditText"
                android:layout_alignBottom="@+id/creditTextView"
                android:layout_alignParentEnd="true"
                android:textColor="@color/textColor"
                android:layout_marginEnd="20dp"
                android:hint="@string/creditHint" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/mark"
                android:id="@+id/markTextView"
                android:layout_below="@+id/creditTextView"
                android:layout_marginTop="10dp"
                android:textSize="25sp"
                android:textColor="@color/black"/>


            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="8"
                android:id="@+id/markEditText"
                android:layout_alignBottom="@+id/markTextView"
                android:layout_alignParentEnd="true"
                android:textColor="@color/textColor"
                android:layout_marginEnd="20dp"
                android:hint="@string/markHint" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/year"
                android:id="@+id/yearTextView"
                android:layout_below="@+id/markTextView"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:textSize="25sp"
                android:textColor="@color/black"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/yearEditText"
                android:layout_alignBottom="@+id/yearTextView"
                android:layout_toEndOf="@id/yearTextView"
                android:ems="5"
                android:textColor="@color/textColor"
                android:inputType="numberSigned"
                android:hint="@string/yearHint"
                android:layout_marginStart="10dp"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/termList"
                android:layout_alignTop="@+id/yearEditText"
                android:layout_alignEnd="@+id/markEditText"
                android:layout_toEndOf="@+id/yearEditText"
                android:layout_alignBottom="@+id/yearEditText" />
        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/id"
            android:id="@+id/uniqueID"
            android:layout_marginTop="25dp"
            android:textSize="20sp"
            android:textColor="#c71a1a"
            android:layout_below="@+id/databaseScreen"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/idText"
            android:layout_alignBottom="@+id/uniqueID"
            android:ems="8"
            android:layout_alignParentEnd="true"
            android:textColor="#0306b7"
            android:layout_marginEnd="20dp"
            android:inputType="numberSigned" />



        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/addBtn"
            android:id="@+id/markAddButton"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/idText"
            android:layout_marginTop="20dp"
            android:background="#f31daf3c" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/UpdateBtn"
            android:id="@+id/updateDataButton"
            android:layout_below="@+id/markAddButton"
            android:layout_marginTop="3dp"
            android:background="#e51ab6d9"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deleteBtn"
            android:id="@+id/deleteButton"
            android:layout_below="@id/updateDataButton"
            android:layout_marginTop="3dp"
            android:background="#e0d77e87"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/idText" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deleteAllBtn"
            android:id="@+id/deleteAllBtn"
            android:layout_below="@id/updateDataButton"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="3dp"
            android:background="#f7d41124"
            android:layout_alignStart="@+id/idText" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/showListBtn"
            android:id="@+id/showDataButton"
            android:layout_below="@+id/deleteButton"
            android:layout_marginTop="3dp"
            android:background="#ecc6bf25"
            android:layout_toStartOf="@+id/gpaButton" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gpaBtn"
            android:id="@+id/gpaButton"
            android:layout_alignTop="@+id/showDataButton"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</ScrollView>