<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="#e6216686"
        tools:context=".ChoseGPAType">


        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:id="@+id/cGPA_view"
            android:src="@drawable/cgpa_f"
            android:layout_marginBottom="270dp"
            android:layout_alignParentTop="true"
            android:scaleType="fitXY"
            style="?android:borderlessButtonStyle"
            android:clickable="true"
            android:contentDescription="@string/cGPABtn" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:id="@+id/sGPA_view"
            android:src="@drawable/sgpa"
            android:layout_marginTop="270dp"
            android:layout_alignParentStart="true"
            android:scaleType="fitXY"
            style="?android:borderlessButtonStyle"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/sGPABtn" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="8"
            android:id="@+id/yearField"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:hint="@string/year" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/termField"
            android:ems="8"
            android:layout_centerVertical="true"
            android:layout_marginStart="31dp"
            android:layout_alignParentEnd="true"
            android:hint="@string/termExample" />

    </RelativeLayout>

</ScrollView>